<?xml version="1.0"?>
<package format="3">
  <name>izs_gm2_productionsim</name>
  <version>0.1.0</version>
  <description>ROS 2 manufacturing line simulation: line generates workpieces, measurement publishes sensor data, quality node evaluates, stats aggregates.</description>

  <maintainer email="izso.roland@gmail.com">Roland Izsó</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <description>
    A ROS2-based manufacturing station simulation where virtual devices cooperate in a quality control workflow.
    The line generates new workpieces, the measurement unit publishes data, and the inspection module evaluates results,
    returning OK/NOK status and statistics to the system.
  </description>

</package>
